Even more fixes for dark mode

--- a/style.css
+++ b/style.css
@@ -14,10 +14,3 @@ body{
     overflow: hidden;
     align-items: center;
 }
-
-.title {
-    color: white;
-}
-.subtitle {
-    color: white;
-}
